fixed spacing around gutters

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,7 @@ main {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-around;
+    justify-content: center;
     margin: 0;
 }
 
